render creating of tool type in tool type index page with conditionally rending an edit button to the author, adjust nav to bring user to index page, include route to adding new tool within index page

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -6,9 +6,9 @@
   <nav>
     <i class="fas fa-plane fa-2x"></i>
     <a 
-      href="/toolTypes/new" class=<%= title === 'Add Meal' ? 'active' : '' %>
+      href="/toolTypes" class=<%= title === 'Add Meal' ? 'active' : '' %>
     >
-      ADD TOOL TYPE
+      TOOL TYPES
     </a>
     <% if (user) { %>
       <a href="/auth/logout" class="right">
