render message to user/author in boht new and edit to not leave fields blank while creating or editing tool types'

--- a/views/toolTypes/edit.ejs
+++ b/views/toolTypes/edit.ejs
@@ -29,6 +29,12 @@
   </form>
   <form action="/toolTypes/<%= toolType._id %>?_method=DELETE" method="POST">
     <button type="submit">Delete Tool Type</button>
+  </form>
+  <% if (blankError) { %>
+    <div>
+      <h2>Please don't leave any fields blank</h2>
+    </div>
+  <% } %>
 </main>
 
 <%- include('../partials/footer') %>
