--- a/views/toolTypes/new.ejs
+++ b/views/toolTypes/new.ejs
@@ -24,6 +24,11 @@
       </div>
     </div>
     <button type="submit">Add Tool Type</button>
+    <% if (blankError) { %>
+      <div>
+        <h2>Please don't leave any fields blank</h2>
+      </div>
+    <% } %>
 </main>
 
 <%- include('../partials/footer') %>
