render to user attempt to duplicate tool type

--- a/views/toolTypes/new.ejs
+++ b/views/toolTypes/new.ejs
@@ -24,11 +24,18 @@
       </div>
     </div>
     <button type="submit">Add Tool Type</button>
-    <% if (blankError) { %>
-      <div>
-        <h2>Please don't leave any fields blank</h2>
-      </div>
-    <% } %>
+  </form>
+  <% if (blankError) { %>
+    <div>
+      <h2>Please don't leave any fields blank</h2>
+    </div>
+  <% } %>
+  <% if (duplicateError) { %>
+    <div>
+      <h2>That tool type already exists</h2>
+    </div>
+  <% } %>
+
 </main>
 
 <%- include('../partials/footer') %>
