--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,11 +4,16 @@
 </head>
 <body>
   <nav>
-    <i class="fas fa-plane fa-2x"></i>
+    <!-- <i class="fas fa-plane fa-2x"></i> -->
     <a 
-      href="/toolTypes" class=<%= title === 'Add Meal' ? 'active' : '' %>
+      href="/toolTypes" class=<%= title === 'Tool Types' ? 'active' : '' %>
     >
       TOOL TYPES
+    </a>
+    <a 
+      href="/tools" class=<%= title === 'Tools' ? 'active' : '' %>
+    >
+      TOOLS
     </a>
     <% if (user) { %>
       <a href="/auth/logout" class="right">
