ensure tooltypes are passed in case of errors creating duplicate tools or leaving inputs blank

--- a/views/toolTypes/index.ejs
+++ b/views/toolTypes/index.ejs
@@ -2,7 +2,7 @@
 <%- include('../partials/nav') %>
 
 <main>
-  <h1> Tool Types</h1>
+  <h1> <%= title %></h1>
   <% if (user) { %>
     <a href="/toolTypes/new">
       <button type="button">Add Tool Type</button>
