--- a/views/tools/new.ejs
+++ b/views/tools/new.ejs
@@ -20,9 +20,12 @@
           <input type="text" name="imgSrc" id="imgSrc">
       </div>
       <div>
-          <label for="imgAttribution"> Owner of Image for Attribution</label>
-          <input type="text" name="imgAttribution" id="imgAttribution">
+          <label for="imgOwner"> Image Owner Name </label>
+          <input type="text" name="imgOwner" id="imgAttribution">
       </div>
+      <div>
+          <label for="imgOwnerLink"> Link to Owner of Image</label>
+          <input type="text" name="imgOwnerLink" id="imgOwnerLink">
       <div>
           <label for="difficulty">Difficulty to Perform (0-10)</label>
           <select name="difficulty" id="difficulty">
