--- a/views/tools/show.ejs
+++ b/views/tools/show.ejs
@@ -26,8 +26,13 @@
   <div>
     <% if (tool.author.equals(user?.profile._id)) { %>
       <a href="/tools/<%= tool._id %>/edit">
-        <button type="button">Edit/Delete</button>
+        <button type="button">Edit Tool</button>
       </a>
+    <% } %>
+    <% if (tool.author.equals(user?.profile._id)) { %>
+      <form action="/tools/<%= tool._id %>?_method=DELETE" method="POST">
+        <button type="submit">Delete Tool</button>
+      </form>
     <% } %>
   </div>
 </main>
