--- a/views/tools/show.ejs
+++ b/views/tools/show.ejs
@@ -24,6 +24,11 @@
     <%= tool.instructions %>
   </div>
   <div>
+      <a href="/tools/<%= tool._id %>/reviews">
+        <button type="button">See Reviews</button>
+      </a>
+  </div>
+  <div>
     <% if (tool.author.equals(user?.profile._id)) { %>
       <a href="/tools/<%= tool._id %>/edit">
         <button type="button">Edit Tool</button>
