change edit buttons to update buttons while on edit pages to more clearly communicate with author

--- a/views/reviews/edit.ejs
+++ b/views/reviews/edit.ejs
@@ -24,7 +24,7 @@
     </div>
     <% if (review.author.equals(user?.profile._id)) { %>
       <div>
-        <button type="submit">Edit Review</button>
+        <button type="submit">Update Review</button>
       </div>
     <% } %>
   </form>
