--- a/views/tools/edit.ejs
+++ b/views/tools/edit.ejs
@@ -54,7 +54,7 @@
       </div>
       <div>
         <% if (tool.author.equals(user?.profile._id)) { %>
-          <button type="submit">Edit Tool</button>
+          <button type="submit">Update Tool</button>
         <% } %>
       </div>
     </form>
