--- a/views/toolTypes/edit.ejs
+++ b/views/toolTypes/edit.ejs
@@ -24,7 +24,7 @@
       </div>
     </div>
     <div>
-      <button type="submit">Edit Tool Type</button>
+      <button type="submit">Update Tool Type</button>
     </div>
   </form>
   <form action="/toolTypes/<%= toolType._id %>?_method=DELETE" method="POST">
