create profiles controller, router, mount rotuer in server, create veiw folder

--- a/views/tools/index.ejs
+++ b/views/tools/index.ejs
@@ -17,6 +17,9 @@
         <p> Tool Type: <%= tool.type.name %></p>
         <img src="<%= tool.imgSrc %>" alt="tool image">
         <p>Image from <a href="<%= tool.imgOwnerLink %>"><%= tool.imgOwner %></a></p>
+        <% if (tool.averageRating) { %>
+          <p> Average Rating: <%= tool.averageRating %></p>
+        <% } %>
         <a href="/tools/<%= tool._id %>">
           <button> Tool Details</button>
         </a>
