render list of profiles to guests and users with UI for details about those profiles

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -6,6 +6,11 @@
   <nav>
     <!-- <i class="fas fa-plane fa-2x"></i> -->
     <a 
+      href="/profiles" class=<%= title === 'Profiles' ? 'active' : '' %>
+    >
+      PROFILES
+    </a>
+    <a 
       href="/toolTypes" class=<%= title === 'Tool Types' ? 'active' : '' %>
     >
       TOOL TYPES
