render view of tool reviews by a user, if author render edit button for easier access to modify reviews

--- a/views/profiles/show.ejs
+++ b/views/profiles/show.ejs
@@ -20,7 +20,7 @@
       <h2>Tool Reviews: <%= profile.reviews.length %></h2>
       <% if (user) { %>
             <div>
-              <a href="/profiles/<%= profile._id %>/reviews">
+              <a href="/profiles/<%= profile._id %>/toolReviews">
                 <button> See Reviews</button>
               </a>
             </div>
