ensure all tools referencing a delted tool type are deleted when the tool type is deleted to reduce tool index errors

--- a/views/tools/show.ejs
+++ b/views/tools/show.ejs
@@ -29,7 +29,7 @@
       </a>
   </div>
   <div>
-    <form action="/profiles/<%= user.profile._id %>/favoriteTools/<%= tool._id %>"
+    <form action="/profiles/<%= user?.profile._id %>/favoriteTools/<%= tool._id %>"
     method="POST">
     <button type="submit">Add to Favorites</button>
     </form>
