--- a/views/tools/index.ejs
+++ b/views/tools/index.ejs
@@ -14,7 +14,9 @@
       <div>
         <h2>Name: <%= tool.name %></h2>
         <p>Created by: <%= tool.author.name %></p>
-        <p> Tool Type: <%= tool.type.name %></p>
+        <% if (tool.type) { %>
+          <p> Tool Type: <%= tool.type.name %></p>
+        <% } %>
         <img src="<%= tool.imgSrc %>" alt="tool image">
         <p>Image from <a href="<%= tool.imgOwnerLink %>"><%= tool.imgOwner %></a></p>
         <% if (tool.averageRating) { %>
