--- a/views/profiles/show.ejs
+++ b/views/profiles/show.ejs
@@ -9,7 +9,7 @@
       <p>Member since: <%= profile.createdAt.toLocaleDateString() %></p>
     </div>
     <div>
-      <h2>Created Tools: <%= profile.createdTools.length %></h2>
+      <h2>Created Tools: <%= tools.length %></h2>
       <% if (user) { %>
         <div>
           <a href="/profiles/<%= profile._id %>/createdTools">
@@ -17,7 +17,7 @@
           </a>
         </div>
       <% } %>
-      <h2>Created Tool Types: <%= profile.createdToolTypes.length %></h2>
+      <h2>Created Tool Types: <%=  toolTypes.length %></h2>
       <% if (user) { %>
         <div>
           <a href="/profiles/<%= profile._id %>/createdToolTypes">
@@ -25,7 +25,7 @@
           </a>
         </div>
       <% } %>
-      <h2>Tool Reviews: <%= profile.reviews.length %></h2>
+      <h2>Tool Reviews: <%= reviews.length %></h2>
       <% if (user) { %>
         <div>
           <a href="/profiles/<%= profile._id %>/toolReviews">
