--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -31,7 +31,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: rgba(207, 216, 219, 1);
+  background-color: #f7f7f7;
   height: 60px;
   padding: 0 10px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -51,5 +51,5 @@ nav {
   }
   
   nav .active {
-  color: rgb(16, 168, 127);
+  color: rgb(12, 128, 97);
   }
