--- a/views/tools/new.ejs
+++ b/views/tools/new.ejs
@@ -1,4 +1,6 @@
 <%- include('../partials/html-head') %>
+
+<link rel="stylesheet" href="/stylesheets//tools/form.css" />
 <%- include('../partials/nav') %>
 
 <main>
@@ -6,14 +8,13 @@
   <section>
     <form action="/tools" method="POST">
       <div>
-        <div>
-          <label for="name">Name</label>
-          <input type="text" name="name" id="name" autocomplete="off"/>
+        <label for="name">Name</label>
+        <input type="text" name="name" id="name" autocomplete="off"/>
       </div>
       <div>
           <label for="instructions">Instructions</label>
           <textarea type="text" name="instructions" id="instructions" maxlength="1500"></textarea>
-          1500 char max
+          <p>1500 char max</p>
       </div>
       <div>
           <label for="imgSrc"> Link To Image</label>
@@ -26,8 +27,9 @@
       <div>
           <label for="imgOwnerLink"> Link to Owner of Image</label>
           <input type="text" name="imgOwnerLink" id="imgOwnerLink">
-      <div>
-          <label for="difficulty">Difficulty to Perform (0-10)</label>
+      <div id="selectors">
+        <div>
+          <label for="difficulty">Difficulty to Perform (0-5)</label>
           <select name="difficulty" id="difficulty">
             <option value="1">1</option>
             <option value="2">2</option>
@@ -35,31 +37,36 @@
             <option value="4">4</option>
             <option value="5">5</option>
           </select>
-      </div>
-      <div>
+        </div>
+        <div>
           <label for="toolTypeId">Tool Type</label>
           <select name="type" id="toolTypeId">
             <% toolTypes.forEach(toolType => { %>
               <option value="<%= toolType._id %>"><%= toolType.name %></option>
             <% }) %>
           </select>
+        </div>
       </div>
-      <div>
+      <div id="button">
         <button type="submit">Add Tool</button>
       </div>
     </form>
+    <% if (blankError) { %>
+      <div class="error">
+        <h2>Please don't leave any fields blank</h2>
+      </div>
+    <% } %>
+    <% if (duplicateError) { %>
+      <div class="error">
+        <h2>That tool already exists</h2>
+      </div>
+    <% } else if (!duplicateError && !blankError) { %>
+      <div class="error">
+        <h2> Thanks for sharing </h2>
+      </div>
+    <% } %>
   </section>
-
-  <% if (blankError) { %>
-    <div>
-      <h2>Please don't leave any fields blank</h2>
-    </div>
-  <% } %>
-  <% if (duplicateError) { %>
-    <div>
-      <h2>That tool already exists</h2>
-    </div>
-  <% } %>
+  
 
 </main>
 
